--- a/multipage/css/style.css
+++ b/multipage/css/style.css
@@ -94,9 +94,34 @@ html {
 }
 
 .prevnext{
-  color:#ffffff;
-  background: rgb(54,60,117);
-  background: linear-gradient(90deg, rgba(54,60,117,1) 0%, rgba(209,46,137,1) 51%, rgba(24,175,238,1) 100%);   
+  text-align:center;
+}
+
+.prevnext a{
+  text-decoration:none;
+  text-transform:uppercase;
+  font-weight:600;
+}
+
+
+.previous{
+  background-color:#18afee;
+  border-right:2px solid #0a3e55;
+  transition-duration:.5s;
+}
+
+.previous:hover{
+  background-color:#d12e89;
+  border-right:2px solid #0a3e55;
+}
+
+.next{
+  background-color:#18afee;
+  transition-duration:.5s;
+}
+
+.next:hover{
+  background-color:#d12e89;
 }
 
 .footer{
